css/style.css
/* ... */
.description {
 color: #a7acb3;
 font-family: 'Space Grotesk', sans-serif;
}
.home-preview-description {
 max-width: 410px;
 margin-top: 15px;
}
#current-projects img {
 border: 1px solid #30363D;
}
#current-projects .home-teaser-list {
 border-top: 1px dotted #30363D;
 padding-top: 70px;
}
#current-projects .hero-image-home-link-block {
 max-width: 450px;
 margin-left: 40px;
}
#current-projects p {
 margin-top: 25px;
 line-height: 23px;
 font-size: 16px !important;
}
#automatons, #drips {
 border-radius: 2px;
 opacity: 1;
}
.swiper-container {
 background: transparent;
 max-width: 453px;
 overflow: hidden;
}
#project-2nd .home-teaser-list {
 margin-top: 30px;
 border-top: none;
 border-bottom: 1px dotted #30363D;
 padding-bottom: 95px;
}
#project-2nd img {
 border-radius: 2px;
}
footer {
 margin-top: 150px;
 margin-bottom: 40px;
}
footer a {
 color: #2f81f7;
}
footer a:hover {
 border-color: #2f81f7;
}
footer h3 {
 color: #d5e1eb;
 font-family: "DegularDisplay-Black", sans-serif;
}
.name h1 {
 max-width: 300px !important;
}
.intro img {
 float: right !important;
 margin-right: 10px;
}

/*responsive design*/
@media (min-width: 769px) and (max-width: 1023px) {
 .smoke-container {
   left: 5.25vw;
   top: 5vw;
 }
}
.intro h1, .intro img {
 float: left;
}
footer a {
 border-bottom: 1px dotted #30363D;
 margin-left: 12px;
}
@media (max-width: 768px) {
 .hero {
   margin-top: 80px;
 }
 .hero h1 {
   font-size: 39px;
 }
 .hero img {
   width: 108px;
   height: 108px;
 }
 #project-2nd .swiper-container {
   background: #95E9EF;
   background: #21262D;
}
#current-projects .home-teaser-list {
 padding-top: 0px;
}
.home-project-title {
 margin-right: 0;
 margin-top: 40px;
}
#current-projects .hero-image-home-link-block {
 margin-left: 0;
}
#current-projects .hero-image-home-link-block {
 margin-top: 30px;
}
footer {
 margin-top: 70px;
 margin-bottom: 20px;
}
.mt-10-sm {
 margin-top: 50px;
}
.hero p {
 font-size: 15px;
}
.twitter {
 color: #2f81f7;
}
.smoke-container {
 top: 15px;
 left: 40px;
}
.whirl {
 left: calc(50% + 18px);
}
.giant-smoke {
 animation-duration: 10s;
 animation-delay: 7s;
 bottom: -22px;
 left: 85%
}
#ash {
 left: 26px;
}
}

@media (max-width: 640px) {
 .smoke-container {
   top: 16.5vw;
   left: .5vw;
   width: 10px;
   height: 10px;
 }
 .whirl {
   background: rgba(105, 105, 105, 0.6);
 }
 
 .whirl8, .whirl9, .whirl10 {
   width: 2px;
   height: 15px;
 }
}

@media (max-width: 428px) {
  .smoke-container {
    top: 18.25vw;
    left: 1.25vw;
    width: 10px;
    height: 10px;
  }
}

@media (min-width: 768px) {
 #current-projects p {
 margin-top: 25px;
 line-height: 23px;
 font-size: 14px;
 max-width: 425px;
}
}

 @media (min-width: 768px) and (max-width: 1064px) {
  .smoke-container {
    left: 6.25vw;
    top: 5.75vw;
  }
 }

 @media (min-width: 1024px) and (max-width: 1280px) {
  .smoke-container {
    left: 4.25vw;
    top: 4.5vw;
  }
 }

 @media (min-width: 640px) and (max-width: 768px) {
  .smoke-container {
    left: 5.5vw;
    top: 1vw;
  }
 }

 @media (min-width: 429px) and (max-width: 640px) {
  .smoke-container {
    left: 1vw;
    top: 18vw;
  }
 }

